@@ -1,0 +1,26 @@
+package dw.xmlrpc.exception;
+
+/**
+ * Thrown by Dokuwiki when one try to use putPage with an empty page content
+ * if the page doesn't exist yet (or has alreay been deleted)
+ */
+public class DokuEmptyNewPageException extends DokuException {
+
+	private static final long serialVersionUID = 3088375008770606694L;
+
+	public DokuEmptyNewPageException() {
+	}
+
+	public DokuEmptyNewPageException(String message) {
+		super(message);
+	}
+
+	public DokuEmptyNewPageException(Throwable cause) {
+		super(cause);
+	}
+
+	public DokuEmptyNewPageException(String message, Throwable cause) {
+		super(message, cause);
+	}
+
+}
